# ParaCL

./: .gitignore  CMakeLists.txt  graph  readme.md  sosal
.github/workflows/: workflow.yml
ParaCL/include/: AST.h  AST_dumper.h  ast_representation.h  concepts.h  driver_exceptions.h  lexer.h  paracl.h  parser.h  semantic.h  symbol_table.h
ParaCL/src/: paracl.cpp  parser.y  scanner.l
e2e/: CMakeLists.txt  runtest.sh
e2e/data/: .test12.pcl.swp  .test15.pcl.swp  test11.pcl  test12.pcl  test14.pcl  test15.pcl  test16.pcl  test17.pcl  test18.pcl  test2.pcl  test20.pcl  test22.pcl  test23.pcl  test24.pcl  test26.pcl  test28.ans  test28.pcl  test4.pcl  test5.ans  test5.pcl  test7.pcl  test8.pcl  test9.ans  test9.pcl
unit_tests/: CMakeLists.txt
